refactor: cambio .toList() por .collect(Collectors.toList()) para garantizar mutabilidad y flexibilidad en Streams().